tests/snapshots/integration__integration_tests__help__help_config_create.snap
---
source: tests/integration_tests/help.rs
info:
  program: wt
  args:
    - config
    - create
    - "--help"
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_EDITOR: ""
    SOURCE_DATE_EPOCH: "1735776000"
    WORKTRUNK_CONFIG_PATH: /nonexistent/test/config.toml
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
wt config create - Create configuration file
Usage: [1m[36mwt config create[0m [36m[OPTIONS][0m

[1m[32mOptions:[0m
      [1m[36m--project[0m
          Create project config ([1m.config/wt.toml[0m) instead of user config

  [1m[36m-h[0m, [1m[36m--help[0m
          Print help (see a summary with '-h')

[1m[32mGlobal Options:[0m
  [1m[36m-C[0m[36m [0m[36m<path>[0m
          Working directory for this command

      [1m[36m--config[0m[36m [0m[36m<path>[0m
          User config file path

  [1m[36m-v[0m, [1m[36m--verbose[0m
          Show commands and debug info

[32mUser config[0m

Creates [2m~/.config/worktrunk/config.toml[0m with the following content:

  [2m# Worktrunk Global Configuration[0m
  [2m# Copy to: ~/.config/worktrunk/config.toml (or use `wt config create`)[0m
  [2m#[0m
  [2m# Alternative locations (XDG Base Directory spec):[0m
  [2m#   macOS/Linux:   $XDG_CONFIG_HOME/worktrunk/config.toml[0m
  [2m#   Windows:       %APPDATA%\worktrunk\config.toml[0m
  [2m[0m
  [2m# Commit Message Generation (Optional)[0m
  [2m# For generating commit messages during merge operations (wt merge)[0m
  [2m[commit-generation][0m
  [2m# Example: Simon Willison's llm CLI (https://github.com/simonw/llm)[0m
  [2m# Install: pip install llm llm-anthropic[0m
  [2mcommand = "llm"[0m
  [2margs = ["-m", "claude-haiku-4.5"][0m
  [2m[0m
  [2m# Alternative: AIChat - Rust-based, supports 20+ providers[0m
  [2m# Install from: https://github.com/sigoden/aichat[0m
  [2m# command = "aichat"[0m
  [2m# args = ["-m", "claude:claude-haiku-4.5"][0m
  [2m[0m
  [2m# Optional: Load template from file (mutually exclusive with 'template')[0m
  [2m# Supports ~ expansion: ~/.config/worktrunk/commit-template.txt[0m
  [2m# template-file = "~/.config/worktrunk/commit-template.txt"[0m
  [2m[0m
  [2m# Optional: Load squash template from file (mutually exclusive with 'squash-template')[0m
  [2m# Supports ~ expansion: ~/.config/worktrunk/squash-template.txt[0m
  [2m# squash-template-file = "~/.config/worktrunk/squash-template.txt"[0m
  [2m[0m
  [2m# See "Custom Prompt Templates" section at end of file for inline template options.[0m
  [2m[0m
  [2m# Worktree Path Template[0m
  [2m# Variables:[0m
  [2m#   {{ main_worktree }} - Main worktree directory name (e.g., "myproject")[0m
  [2m#   {{ branch }}        - Branch name with slashes replaced by dashes (feature/auth → feature-auth)[0m
  [2m#[0m
  [2m# Paths are relative to the main worktree root (original repository directory).[0m
  [2m#[0m
  [2m# Example paths created (main worktree at /Users/dev/myproject, branch feature/auth):[0m
  [2m#   "../{{ main_worktree }}.{{ branch }}" → /Users/dev/myproject.feature-auth[0m
  [2m#   ".worktrees/{{ branch }}"             → /Users/dev/myproject/.worktrees/feature-auth[0m
  [2mworktree-path = "../{{ main_worktree }}.{{ branch }}"[0m
  [2m[0m
  [2m# Alternative: Inside repo (useful for bare repos)[0m
  [2m# worktree-path = ".worktrees/{{ branch }}"[0m
  [2m[0m
  [2m# List Command Defaults[0m
  [2m# Configure default behavior for `wt list`[0m
  [2m[list][0m
  [2mfull = false       # Show CI and `main` diffstat by default[0m
  [2mbranches = false   # Include branches without worktrees by default[0m
  [2mremotes = false    # Include remote branches by default[0m
  [2m[0m
  [2m# Commit Defaults (shared by `wt step commit`, `wt step squash`, and `wt merge`)[0m
  [2m[commit][0m
  [2mstage = "all"          # What to stage: "all", "tracked", or "none"[0m
  [2m[0m
  [2m# Merge Command Defaults[0m
  [2m# Note: `stage` defaults from [commit] section above[0m
  [2m[merge][0m
  [2msquash = true          # Squash commits when merging[0m
  [2mcommit = true          # Commit, squash, and rebase during merge[0m
  [2mremove = true          # Remove worktree after merge[0m
  [2mverify = true          # Run project hooks[0m
  [2m[0m
  [2m# Approved Commands[0m
  [2m# Commands approved for automatic execution after switching worktrees[0m
  [2m# Auto-populated when you use: wt switch --execute "command" --force[0m
  [2m[projects."github.com/user/repo"][0m
  [2mapproved-commands = ["npm install"][0m
  [2m[0m
  [2m# NOTE: For project-specific hooks (post-create, post-start, pre-merge, etc.),[0m
  [2m# use a separate PROJECT config file at <repo>/.config/wt.toml[0m
  [2m# Run `wt config create --project` to create one, or see https://worktrunk.dev/hooks/[0m
  [2m[0m
  [2m# ============================================================================[0m
  [2m# Custom Prompt Templates (Advanced)[0m
  [2m# ============================================================================[0m
  [2m# These options belong under [commit-generation] section above.[0m
  [2m# NOTE: Templates are synced from src/llm.rs by `cargo test readme_sync`[0m
  [2m[0m
  [2m# Optional: Custom prompt template (inline) - Uses minijinja syntax[0m
  [2m# Available variables: {{ git_diff }}, {{ branch }}, {{ recent_commits }}, {{ repo }}[0m
  [2m# If not specified, uses the default template shown below:[0m
  [2m# <!-- DEFAULT_TEMPLATE_START -->[0m
  [2m# template = """[0m
  [2m# Format[0m
  [2m# - First line: <50 chars, present tense, describes WHAT and WHY (not HOW).[0m
  [2m# - Blank line after first line.[0m
  [2m# - Optional details with proper line breaks explaining context. Commits with more substantial changes should have more details.[0m
  [2m# - Return ONLY the formatted message without quotes, code blocks, or preamble.[0m
  [2m#[0m
  [2m# Style[0m
  [2m# - Do not give normative statements or otherwise speculate on why the change was made.[0m
  [2m# - Broadly match the style of the previous commit messages.[0m
  [2m#   - For example, if they're in conventional commit format, use conventional commits; if they're not, don't use conventional commits.[0m
  [2m#[0m
  [2m# The context contains:[0m
  [2m# - <git-diff> with the staged changes. This is the ONLY content you should base your message on.[0m
  [2m# - <git-info> with branch name and recent commit message titles for style reference ONLY. DO NOT use their content to inform your message.[0m
  [2m#[0m
  [2m# ---[0m
  [2m# The following is the context for your task:[0m
  [2m# ---[0m
  [2m# <git-diff>[0m
  [2m# ```[0m
  [2m# {{ git_diff }}[0m
  [2m# ```[0m
  [2m# </git-diff>[0m
  [2m#[0m
  [2m# <git-info>[0m
  [2m#   <current-branch>{{ branch }}</current-branch>[0m
  [2m# {% if recent_commits %}[0m
  [2m#   <previous-commit-message-titles>[0m
  [2m# {% for commit in recent_commits %}[0m
  [2m#     <previous-commit-message-title>{{ commit }}</previous-commit-message-title>[0m
  [2m# {% endfor %}[0m
  [2m#   </previous-commit-message-titles>[0m
  [2m# {% endif %}[0m
  [2m# </git-info>[0m
  [2m# """[0m
  [2m# <!-- DEFAULT_TEMPLATE_END -->[0m
  [2m#[0m
  [2m# Example alternative template with different style:[0m
  [2m# template = """[0m
  [2m# Generate a commit message for {{ repo | upper }}.[0m
  [2m#[0m
  [2m# Branch: {{ branch }}[0m
  [2m# {%- if recent_commits %}[0m
  [2m#[0m
  [2m# Recent commit style ({{ recent_commits | length }} commits):[0m
  [2m# {%- for commit in recent_commits %}[0m
  [2m#   {{ loop.index }}. {{ commit }}[0m
  [2m# {%- endfor %}[0m
  [2m# {%- endif %}[0m
  [2m#[0m
  [2m# Changes to commit:[0m
  [2m# ```[0m
  [2m# {{ git_diff }}[0m
  [2m# ```[0m
  [2m#[0m
  [2m# Requirements:[0m
  [2m# - Follow the style of recent commits above[0m
  [2m# - First line under 50 chars[0m
  [2m# - Focus on WHY, not HOW[0m
  [2m# """[0m
  [2m[0m
  [2m# Optional: Custom squash commit message template (inline) - Uses minijinja syntax[0m
  [2m# Available variables: {{ git_diff }}, {{ branch }}, {{ recent_commits }}, {{ repo }}, {{ commits }}, {{ target_branch }}[0m
  [2m# If not specified, uses the default template:[0m
  [2m# <!-- DEFAULT_SQUASH_TEMPLATE_START -->[0m
  [2m# squash-template = """[0m
  [2m# Generate a commit message that combines these changes into one cohesive message. Output only the commit message without any explanation.[0m
  [2m#[0m
  [2m# Format[0m
  [2m# - First line: <50 chars, present tense, describes WHAT and WHY (not HOW).[0m
  [2m# - Blank line after first line.[0m
  [2m# - Optional details with proper line breaks explaining context.[0m
  [2m# - Match the style of the existing commits being squashed (e.g., if they use conventional commits, use conventional commits).[0m
  [2m#[0m
  [2m# Squashing commits from {{ branch }} to merge into {{ target_branch }}[0m
  [2m#[0m
  [2m# Commits being combined:[0m
  [2m# {% for commit in commits %}[0m
  [2m# - {{ commit }}[0m
  [2m# {% endfor %}[0m
  [2m#[0m
  [2m# <git-diff>[0m
  [2m# ```[0m
  [2m# {{ git_diff }}[0m
  [2m# ```[0m
  [2m# </git-diff>[0m
  [2m# """[0m
  [2m# <!-- DEFAULT_SQUASH_TEMPLATE_END -->[0m
  [2m#[0m
  [2m# Example alternative template:[0m
  [2m# squash-template = """[0m
  [2m# Squashing {{ commits | length }} commit(s) from {{ branch }} to {{ target_branch }}.[0m
  [2m#[0m
  [2m# {% if commits | length > 1 -%}[0m
  [2m# Commits being combined:[0m
  [2m# {%- for c in commits %}[0m
  [2m#   {{ loop.index }}/{{ loop.length }}: {{ c }}[0m
  [2m# {%- endfor %}[0m
  [2m# {%- else -%}[0m
  [2m# Single commit: {{ commits[0] }}[0m
  [2m# {%- endif %}[0m
  [2m#[0m
  [2m# Generate one cohesive commit message that captures the overall change.[0m
  [2m# Use conventional commit format (feat/fix/docs/refactor).[0m
  [2m# """[0m

[32mProject config[0m

With [2m--project[0m, creates [2m.config/wt.toml[0m in the current repository:

  [2m# Worktrunk Project Configuration[0m
  [2m# Copy to: <repo>/.config/wt.toml[0m
  [2m#[0m
  [2m# This file defines project-specific hooks that run automatically during[0m
  [2m# worktree operations. It should be checked into git and shared across all[0m
  [2m# developers working on the project.[0m
  [2m[0m
  [2m# Available template variables (all hooks):[0m
  [2m#   {{ repo }}      - Repository name (e.g., "my-project")[0m
  [2m#   {{ branch }}    - Branch name (slashes replaced with dashes)[0m
  [2m#   {{ worktree }}  - Absolute path to the worktree[0m
  [2m#   {{ repo_root }} - Absolute path to the repository root[0m
  [2m#[0m
  [2m# Merge-related hooks also support:[0m
  [2m#   {{ target }}    - Target branch for the merge (e.g., "main")[0m
  [2m[0m
  [2m# Post-Create Hook[0m
  [2m# Runs SEQUENTIALLY and BLOCKS until complete[0m
  [2m# The worktree switch won't complete until these finish[0m
  [2m# Commands run one after another in the worktree directory[0m
  [2m#[0m
  [2m# Format options:[0m
  [2m# 1. Single string:[0m
  [2m#    post-create = "npm install"[0m
  [2m#[0m
  [2m# 2. Named table (runs sequentially in declaration order):[0m
  [2m# [post-create][0m
  [2m# install = "npm install --frozen-lockfile"[0m
  [2m# build = "npm run build"[0m
  [2m[0m
  [2m# Post-Start Hook[0m
  [2m# Runs in BACKGROUND as detached processes (parallel)[0m
  [2m# Use for: uv sync, npm install, bundle install, build, dev servers, file watchers,[0m
  [2m# downloading assets too large for git (images, ML models, binaries), long-running tasks[0m
  [2m# The worktree switch completes immediately, these run in parallel[0m
  [2m# Output is logged to .git/wt-logs/{branch}-post-start-{name}.log[0m
  [2m#[0m
  [2m# Format options:[0m
  [2m# 1. Single string:[0m
  [2m#    post-start = "npm run dev"[0m
  [2m#[0m
  [2m# 2. Named table (runs in parallel):[0m
  [2m# [post-start][0m
  [2m# server = "npm run dev"[0m
  [2m# watch = "npm run watch"[0m
  [2m[0m
  [2m# Pre-Commit Hook[0m
  [2m# Runs SEQUENTIALLY before committing changes during merge (blocking, fail-fast)[0m
  [2m# All commands must exit with code 0 for commit to proceed[0m
  [2m# Runs for both squash and no-squash merge modes[0m
  [2m# Use for: formatters, linters, quick validation[0m
  [2m#[0m
  [2m# Single command:[0m
  [2m# pre-commit = "cargo fmt -- --check"[0m
  [2m#[0m
  [2m# Multiple commands:[0m
  [2m# [pre-commit][0m
  [2m# format = "cargo fmt -- --check"[0m
  [2m# lint = "cargo clippy -- -D warnings"[0m
  [2m[0m
  [2m# Pre-Merge Hook[0m
  [2m# Runs SEQUENTIALLY before merging to target branch (blocking, fail-fast)[0m
  [2m# All commands must exit with code 0 for merge to proceed[0m
  [2m# Use for: tests, linters, build verification before merging[0m
  [2m#[0m
  [2m# Single command:[0m
  [2m# pre-merge = "cargo test"[0m
  [2m#[0m
  [2m# Multiple commands:[0m
  [2m# [pre-merge][0m
  [2m# test = "cargo test"[0m
  [2m# build = "cargo build --release"[0m
  [2m[0m
  [2m# Post-Merge Hook[0m
  [2m# Runs SEQUENTIALLY in the main worktree after successful merge (blocking)[0m
  [2m# Runs after push succeeds but before cleanup[0m
  [2m# Use for: updating production builds, notifications, cleanup[0m
  [2m#[0m
  [2m# Single command:[0m
  [2m# post-merge = "cargo install --path ."[0m
  [2m#[0m
  [2m# Multiple commands:[0m
  [2m# [post-merge][0m
  [2m# install = "cargo install --path ."[0m
  [2m# notify = "echo 'Merged!'"[0m
  [2m[0m
  [2m# Example: Node.js Project[0m
  [2m# [post-create][0m
  [2m# install = "npm ci"[0m
  [2m#[0m
  [2m# [post-start][0m
  [2m# server = "npm run dev"[0m
  [2m#[0m
  [2m# [pre-merge][0m
  [2m# lint = "npm run lint"[0m
  [2m# test = "npm test"[0m
  [2m[0m
  [2m# Example: Rust Project[0m
  [2m# [post-create][0m
  [2m# build = "cargo build"[0m
  [2m#[0m
  [2m# [pre-merge][0m
  [2m# format = "cargo fmt -- --check"[0m
  [2m# clippy = "cargo clippy -- -D warnings"[0m
  [2m# test = "cargo test"[0m
  [2m#[0m
  [2m# post-merge = "cargo install --path ."[0m
  [2m[0m
  [2m# Example: Python Project[0m
  [2m# [post-create][0m
  [2m# venv = "python -m venv .venv"[0m
  [2m# install = ".venv/bin/pip install -r requirements.txt"[0m
  [2m#[0m
  [2m# [pre-merge][0m
  [2m# format = ".venv/bin/black --check ."[0m
  [2m# lint = ".venv/bin/ruff check ."[0m
  [2m# test = ".venv/bin/pytest"[0m
