tests/snapshots/integration__integration_tests__help__help_config_long.snap
---
source: tests/integration_tests/help.rs
info:
  program: wt
  args:
    - config
    - "--help"
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_EDITOR: ""
    SOURCE_DATE_EPOCH: "1735776000"
    WORKTRUNK_CONFIG_PATH: /nonexistent/test/config.toml
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
wt config - Manage configuration and shell integration
Usage: [1m[36mwt config[0m [36m[OPTIONS][0m [36m<COMMAND>[0m

[1m[32mCommands:[0m
  [1m[36mshell[0m      Shell integration setup
  [1m[36mcreate[0m     Create configuration file
  [1m[36mshow[0m       Show configuration files & locations
  [1m[36mcache[0m      Manage caches (CI status, default branch)
  [1m[36mvar[0m        Get or set runtime variables (stored in git config)
  [1m[36mapprovals[0m  Manage command approvals

[1m[32mOptions:[0m
  [1m[36m-h[0m, [1m[36m--help[0m
          Print help (see a summary with '-h')

[1m[32mGlobal Options:[0m
  [1m[36m-C[0m[36m [0m[36m<path>[0m
          Working directory for this command

      [1m[36m--config[0m[36m [0m[36m<path>[0m
          User config file path

  [1m[36m-v[0m, [1m[36m--verbose[0m
          Show commands and debug info

Manages configuration, shell integration, and runtime settings.

Worktrunk uses two configuration files:

  File            Location                         Purpose                                                       
  ──────────────  ───────────────────────────────  ──────────────────────────────────────────────────────────────
  [1mUser config[0m     [2m~/.config/worktrunk/config.toml[0m  Personal settings, command defaults, approved project commands
  [1mProject config[0m  [2m.config/wt.toml[0m                  Lifecycle hooks, checked into version control                 

[32mExamples[0m

Install shell integration (required for directory switching):

  [2mwt config shell install[0m

Create user config file with documented examples:

  [2mwt config create[0m

Create project config file (.config/wt.toml) for hooks:

  [2mwt config create --project[0m

Show current configuration and file locations:

  [2mwt config show[0m

[32mUser config[0m

The user config stores personal preferences that apply across all repositories. Create it with [2mwt config create[0m and view with [2mwt config show[0m.

[1mWorktree path template[0m

Controls where new worktrees are created. The template is relative to the repository root.

[1mAvailable variables:[0m
- [2m{{ main_worktree }}[0m — main worktree directory name
- [2m{{ branch }}[0m — branch name (slashes replaced with dashes)

[1mExamples[0m for a repo at [2m~/code/myproject[0m creating branch [2mfeature/login[0m:

  [2m# Default — siblings in parent directory[0m
  [2m# Creates: ~/code/myproject.feature-login[0m
  [2mworktree-path = "../{{ main_worktree }}.{{ branch }}"[0m
  [2m[0m
  [2m# Inside the repository[0m
  [2m# Creates: ~/code/myproject/.worktrees/feature-login[0m
  [2mworktree-path = ".worktrees/{{ branch }}"[0m
  [2m[0m
  [2m# Namespaced (useful when multiple repos share a parent directory)[0m
  [2m# Creates: ~/code/worktrees/myproject/feature-login[0m
  [2mworktree-path = "../worktrees/{{ main_worktree }}/{{ branch }}"[0m

[1mCommand settings[0m

Set persistent flag values for commands. These apply unless explicitly overridden on the command line.

[1m`wt list`:[0m

  [2m[list][0m
  [2m# All off by default[0m
  [2mfull = true      # --full[0m
  [2mbranches = true  # --branches[0m
  [2mremotes = true   # --remotes[0m

[1m`wt step commit` and `wt merge` staging:[0m

  [2m[commit][0m
  [2mstage = "all"    # "all" (default), "tracked", or "none"[0m

[1m`wt merge`:[0m

  [2m[merge][0m
  [2m# These flags are on by default; set to false to disable[0m
  [2msquash = false  # Preserve individual commits (--no-squash)[0m
  [2mcommit = false  # Skip committing uncommitted changes (--no-commit)[0m
  [2mremove = false  # Keep worktree after merge (--no-remove)[0m
  [2mverify = false  # Skip project hooks (--no-verify)[0m

[1mLLM commit messages[0m

Configure automatic commit message generation. Requires an external tool like llm:

  [2m[commit-generation][0m
  [2mcommand = "llm"[0m
  [2margs = ["-m", "claude-haiku-4.5"][0m

See LLM Commit Messages for setup details and template customization.

[1mApproved commands[0m

When project hooks run for the first time, Worktrunk prompts for approval. Approved commands are saved here automatically:

  [2m[projects."my-project"][0m
  [2mapproved-commands = [[0m
  [2m    "post-create.install = npm ci",[0m
  [2m    "pre-merge.test = npm test",[0m
  [2m][0m

Manage approvals with [2mwt config approvals list[0m and [2mwt config approvals clear <repo>[0m.

[32mProject config[0m

The project config defines lifecycle hooks — commands that run at specific points during worktree operations. This file is checked into version control and shared across the team.

Create [2m.config/wt.toml[0m in the repository root:

  [2m[post-create][0m
  [2minstall = "npm ci"[0m
  [2m[0m
  [2m[pre-merge][0m
  [2mtest = "npm test"[0m
  [2mlint = "npm run lint"[0m

See Hooks for complete documentation on hook types, execution order, template variables, and JSON context.

[32mShell integration[0m

Worktrunk needs shell integration to change directories when switching worktrees. Install with:

  [2mwt config shell install[0m

Or manually add to the shell config:

  [2m# For bash: add to ~/.bashrc[0m
  [2meval "$(wt config shell init bash)"[0m
  [2m[0m
  [2m# For zsh: add to ~/.zshrc[0m
  [2meval "$(wt config shell init zsh)"[0m
  [2m[0m
  [2m# For fish: add to ~/.config/fish/config.fish[0m
  [2mwt config shell init fish | source[0m

Without shell integration, [2mwt switch[0m prints the target directory but cannot [2mcd[0m into it.

[32mEnvironment variables[0m

All user config options can be overridden with environment variables using the [2mWORKTRUNK_[0m prefix.

[1mNaming convention[0m

Config keys use kebab-case ([2mworktree-path[0m), while env vars use SCREAMING_SNAKE_CASE ([2mWORKTRUNK_WORKTREE_PATH[0m). The conversion happens automatically.

For nested config sections, use double underscores to separate levels:

  Config                     Environment Variable                
  ─────────────────────────  ────────────────────────────────────
  [2mworktree-path[0m              [2mWORKTRUNK_WORKTREE_PATH[0m             
  [2mcommit-generation.command[0m  [2mWORKTRUNK_COMMIT_GENERATION__COMMAND[0m
  [2mcommit-generation.args[0m     [2mWORKTRUNK_COMMIT_GENERATION__ARGS[0m   

Note the single underscore after [2mWORKTRUNK[0m and double underscores between nested keys.

[1mArray values[0m

Array config values like [2margs = ["-m", "claude-haiku"][0m can be specified as a single string in environment variables:

  [2mexport WORKTRUNK_COMMIT_GENERATION__ARGS="-m claude-haiku"[0m

[1mExample: CI/testing override[0m

Override the LLM command in CI to use a mock:

  [2mWORKTRUNK_COMMIT_GENERATION__COMMAND=echo \[0m
  [2mWORKTRUNK_COMMIT_GENERATION__ARGS="test: automated commit" \[0m
  [2m  wt merge[0m

[1mSpecial variables[0m

  Variable               Purpose                                              
  ─────────────────────  ─────────────────────────────────────────────────────
  [2mWORKTRUNK_CONFIG_PATH[0m  Override user config file location (not a config key)
  [2mNO_COLOR[0m               Disable colored output (standard)                    
  [2mCLICOLOR_FORCE[0m         Force colored output even when not a TTY
