tests/snapshots/integration__integration_tests__help__help_config_short.snap
---
source: tests/integration_tests/help.rs
info:
  program: wt
  args:
    - config
    - "-h"
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_EDITOR: ""
    SOURCE_DATE_EPOCH: "1735776000"
    WORKTRUNK_CONFIG_PATH: /nonexistent/test/config.toml
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
wt config - Manage configuration and shell integration

Usage: [1m[36mwt config[0m [36m[OPTIONS][0m [36m<COMMAND>[0m

[1m[32mCommands:[0m
  [1m[36mshell[0m   Shell integration setup
  [1m[36mcreate[0m  Create configuration file
  [1m[36mshow[0m    Show configuration files & locations
  [1m[36mcache[0m   Manage caches (CI status, default branch)
  [1m[36mvar[0m     Get or set runtime variables (stored in git config)

[1m[32mOptions:[0m
  [1m[36m-h[0m, [1m[36m--help[0m  Print help (see more with '--help')

[1m[32mGlobal Options:[0m
  [1m[36m-C[0m[36m [0m[36m<path>[0m            Working directory for this command
      [1m[36m--config[0m[36m [0m[36m<path>[0m  User config file path
  [1m[36m-v[0m, [1m[36m--verbose[0m        Show commands and debug info
