tests/snapshots/integration__integration_tests__help__help_config_state_ci_status.snap
---
source: tests/integration_tests/help.rs
info:
  program: wt
  args:
    - config
    - state
    - ci-status
    - "--help"
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_EDITOR: ""
    RUST_LOG: warn
    SOURCE_DATE_EPOCH: "1735776000"
    TERM: alacritty
    WORKTRUNK_CONFIG_PATH: /nonexistent/test/config.toml
    WORKTRUNK_TEST_SKIP_URL_HEALTH_CHECK: "1"
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
wt config state ci-status - CI status cache

Usage: [1m[36mwt config state ci-status[0m [36m[OPTIONS][0m [36m[COMMAND]

[1m[32mCommands:
  [1m[36mget[0m    Get CI status for a branch
  [1m[36mclear[0m  Clear CI status cache

[1m[32mOptions:
  [1m[36m-h[0m, [1m[36m--help
          Print help (see a summary with '-h')

[1m[32mGlobal Options:
  [1m[36m-C[0m[36m [0m[36m<path>
          Working directory for this command

      [1m[36m--config[0m[36m [0m[36m<path>
          User config file path

  [1m[36m-v[0m, [1m[36m--verbose
          Show commands and debug info

Caches GitHub/GitLab CI status for display in [2mwt list[0m.

[32mHow it works

1. [1mPlatform detection[0m — From [2m[ci] platform[0m in project config, or detected from remote URL (github.com → GitHub, gitlab.com → GitLab)
2. [1mCLI requirement[0m — Requires [2mgh[0m (GitHub) or [2mglab[0m (GitLab) CLI, authenticated
3. [1mWhat's checked[0m — PRs/MRs first, then branch pipelines for branches with upstream
4. [1mCaching[0m — Results cached 30-60 seconds per branch+commit

[32mStatus values

    Status                   Meaning                 
   ───────── ─────────────────────────────────────── 
   passed    All checks passed                       
   running   Checks in progress                      
   failed    Checks failed                           
   conflicts PR has merge conflicts                  
   no-ci     No checks configured                    
   error     Fetch error (rate limit, network, auth) 

See [2mwt list[0m CI status for display symbols and colors.

Without a subcommand, runs [2mget[0m for the current branch. Use [2mget --refresh[0m to force re-fetch or [2mclear --all[0m to reset cache.
