tests/snapshots/integration__integration_tests__help__help_config_state_previous_branch.snap
---
source: tests/integration_tests/help.rs
info:
  program: wt
  args:
    - config
    - state
    - previous-branch
    - "--help"
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_EDITOR: ""
    RUST_LOG: warn
    SOURCE_DATE_EPOCH: "1735776000"
    TERM: alacritty
    WORKTRUNK_CONFIG_PATH: /nonexistent/test/config.toml
    WORKTRUNK_TEST_SKIP_URL_HEALTH_CHECK: "1"
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
wt config state previous-branch - Previous branch (for [1mwt switch -[0m)

Usage: [1m[36mwt config state previous-branch[0m [36m[OPTIONS][0m [36m[COMMAND]

[1m[32mCommands:
  [1m[36mget[0m    Get the previous branch
  [1m[36mset[0m    Set the previous branch
  [1m[36mclear[0m  Clear the previous branch

[1m[32mOptions:
  [1m[36m-h[0m, [1m[36m--help
          Print help (see a summary with '-h')

[1m[32mGlobal Options:
  [1m[36m-C[0m[36m [0m[36m<path>
          Working directory for this command

      [1m[36m--config[0m[36m [0m[36m<path>
          User config file path

  [1m[36m-v[0m, [1m[36m--verbose
          Show commands and debug info

Enables [2mwt switch -[0m to return to the previous worktree, similar to [2mcd -[0m or [2mgit checkout -[0m.

[32mHow it works

Updated automatically on every [2mwt switch[0m. Stored in git config as [2mworktrunk.history[0m.

Without a subcommand, runs [2mget[0m. Use [2mset[0m to override or [2mclear[0m to reset.
