tests/snapshots/integration__integration_tests__help__help_hook_approvals_add.snap
---
source: tests/integration_tests/help.rs
info:
  program: wt
  args:
    - hook
    - approvals
    - add
    - "--help"
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_EDITOR: ""
    SOURCE_DATE_EPOCH: "1735776000"
    WORKTRUNK_CONFIG_PATH: /nonexistent/test/config.toml
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
wt hook approvals add - Store approvals in config

Usage: [1m[36mwt hook approvals add[0m [36m[OPTIONS][0m

[1m[32mOptions:[0m
      [1m[36m--all[0m
          Show all commands

  [1m[36m-h[0m, [1m[36m--help[0m
          Print help (see a summary with '-h')

[1m[32mGlobal Options:[0m
  [1m[36m-C[0m[36m [0m[36m<path>[0m
          Working directory for this command

      [1m[36m--config[0m[36m [0m[36m<path>[0m
          User config file path

  [1m[36m-v[0m, [1m[36m--verbose[0m
          Show commands and debug info

Prompts for approval of all project commands and saves them to user config.

By default, shows only unapproved commands. Use [2m--all[0m to review all commands
including previously approved ones.
