tests/snapshots/integration__integration_tests__help__help_hook_approvals_clear.snap
---
source: tests/integration_tests/help.rs
info:
  program: wt
  args:
    - hook
    - approvals
    - clear
    - "--help"
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_EDITOR: ""
    SOURCE_DATE_EPOCH: "1735776000"
    WORKTRUNK_CONFIG_PATH: /nonexistent/test/config.toml
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
wt hook approvals clear - Clear approved commands from config

Usage: [1m[36mwt hook approvals clear[0m [36m[OPTIONS][0m

[1m[32mOptions:[0m
  [1m[36m-g[0m, [1m[36m--global[0m
          Clear global approvals

  [1m[36m-h[0m, [1m[36m--help[0m
          Print help (see a summary with '-h')

[1m[32mGlobal Options:[0m
  [1m[36m-C[0m[36m [0m[36m<path>[0m
          Working directory for this command

      [1m[36m--config[0m[36m [0m[36m<path>[0m
          User config file path

  [1m[36m-v[0m, [1m[36m--verbose[0m
          Show commands and debug info

Removes saved approvals, requiring re-approval on next command run.

By default, clears approvals for the current project. Use [2m--global[0m to clear
all approvals across all projects.
